<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_16">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_title"
        android:textAppearance="@style/TextAppearance.App.Headline"
        android:gravity="center"
        android:layout_marginBottom="@dimen/spacing_16"/>

    <TextView
        android:id="@+id/text_module_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_status_loading"
        android:textAppearance="@style/TextAppearance.App.Section"
        android:layout_marginBottom="@dimen/spacing_8"/>

    <TextView
        android:id="@+id/text_hook_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_hook_count_zero"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:layout_marginBottom="@dimen/spacing_8"/>

    <TextView
        android:id="@+id/text_package_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_processed_app_count_zero"
        android:textAppearance="@style/TextAppearance.App.Body"
        android:layout_marginBottom="@dimen/spacing_8"/>

    <TextView
        android:id="@+id/text_processed_packages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_processed_apps_none"
        android:textAppearance="@style/TextAppearance.App.Caption"
        android:layout_marginBottom="@dimen/spacing_16"/>

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_refresh_status"
        android:layout_marginBottom="@dimen/spacing_16"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monitor_hook_details_info"
        android:textAppearance="@style/TextAppearance.App.Section"
        android:layout_marginBottom="@dimen/spacing_8"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_hook_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false"/>

</LinearLayout>

</androidx.core.widget.NestedScrollView>
