<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_12"
    android:layout_marginBottom="@dimen/spacing_8">

    <TextView
        android:id="@+id/text_hook_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hook_detail_hook_name_placeholder"
        android:textAppearance="@style/TextAppearance.App.Title"
        android:layout_marginBottom="@dimen/spacing_4"/>

    <TextView
        android:id="@+id/text_hook_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hook_detail_hook_type_placeholder"
        android:textAppearance="@style/TextAppearance.App.Caption"
        android:layout_marginBottom="@dimen/spacing_4"/>

    <TextView
        android:id="@+id/text_hook_initialized"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hook_detail_initialized_placeholder"
        android:textAppearance="@style/TextAppearance.App.Caption"
        android:layout_marginBottom="@dimen/spacing_4"/>

    <TextView
        android:id="@+id/text_hook_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hook_detail_hook_count_placeholder"
        android:textAppearance="@style/TextAppearance.App.Caption"
        android:layout_marginBottom="@dimen/spacing_4"/>

    <TextView
        android:id="@+id/text_hook_stats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hook_detail_no_stats"
        android:textAppearance="@style/TextAppearance.App.Label"
        android:textColor="?attr/colorOnSurfaceVariant"/>

</LinearLayout>
